--- a/plugins.yml
+++ b/plugins.yml
@@ -7,4 +7,4 @@ project:
   - https://github.com/jupyter-book/myst-plugins/releases/download/exercise-and-solution-pdf/exercise-admonition-pdf.mjs
   - https://github.com/jupyter-book/myst-plugins/releases/download/iframe-to-qr-pdf/iframe-to-qr-pdf.mjs
   # - https://github.com/jupyter-book/myst-plugins/releases/download/updated-date-frontmatter/update-date-frontmatter.mjs
-  - update-date-frontmatter.mjs
+  - update.mjs
